# DockerCW

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py
habits/: admin.py  models.py  paginations.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
nginx/: nginx.conf
users/: admin.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
