[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    { name = "Artemteben", email = "artyom.teben@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drf-yasg (>=1.21.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
